<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="50dp"
            android:onClick="addUser"
            android:text="@string/btnAdd" />

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/txtCodigo"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:gravity="center"
            android:hint="-------"
            android:inputType="number"
            android:textColor="#673AB7"
            android:textColorHint="#9C27B0"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:onClick="eddUser"
            android:text="@string/btnEdit" />

    </LinearLayout>

</RelativeLayout>